@startuml
'https://plantuml.com/class-diagram
!include https://raw.githubusercontent.com/patrik-csak/one-dark-plantuml-theme/v1.0.1/theme.puml

class Alumno {
    nombre: String
    legajo: String
    boolean puedeCursarla(Materia)
}
class Inscripcion {
    alumno: Alumno
    materiasInscriptas: Collection<Materia>
    boolean aprobada()
}
class Materia {
    Collection<Materia> correlativas
}

Materia "*" o-- Materia
Alumno o-- "*" Materia
Inscripcion *-- Alumno
Inscripcion *-- "*" Materia
@enduml